# seamcarver

./: .gitignore  CCocoaGLContext.h  CCocoaGLContext.mm  CLSeamCarver.cpp  CLSeamCarver.hpp  CMakeCache.txt  CMakeLists.txt  GLImageWidget.cpp  GLImageWidget.hpp  JPEG.cpp  JPEG.hpp  LICENSE  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  Makefile  README.md  RGBAImage.cpp  RGBAImage.hpp  SeamCarve  SeamCarverWidget.cpp  SeamCarverWidget.hpp  clProgram.hpp  cmake_install.cmake  glShaders.hpp  main.cpp  post.py  seam_carve.cl  shader.frag  shader.vert
SeamCarve_autogen/: mocs_compilation.cpp
SeamCarve_autogen/EWIEGA46WW/: moc_AspectRatioWidget.cpp  moc_GLImageWidget.cpp  moc_MainWindow.cpp  moc_SeamCarverWidget.cpp
SeamCarve_autogen/include/: ui_MainWindow.h
